[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.2.0",
    "langchain-core>=1.2.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "chromadb>=1.4.0",
    "requests>=2.32.0",
    "sentence-transformers>=5.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]